{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 139,
  "lineage": "56725642-53bd-c4e4-b877-6a705ccfc5a3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "app_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-0f958495da4434d16"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-0f958495da4434d16"
                ]
              }
            ],
            "id": "igw-0a6889223bcd1fa28",
            "internet_gateway_id": "igw-0a6889223bcd1fa28",
            "owner_id": "135928476890",
            "tags": {
              "Name": "victor-jack-zaid-eng47-itgw"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0664c911b424d5cae",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-09fabf5daf516bdf0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-09fabf5daf516bdf0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0c88ee9b84c9cc5c4",
            "private_dns": "ip-10-0-103-234.eu-west-1.compute.internal",
            "private_ip": "10.0.103.234",
            "public_dns": "ec2-34-244-241-149.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.244.241.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02df822fe7e412dd2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-081065f5dfd7cca13",
            "tags": {
              "Name": "jack-eng47-terraform-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-075b1d10e514228fe"
            ]
          },
          "dependencies": [
            "aws_security_group.app_security_group",
            "aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-012830ca5836fcce2",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0d65c7d17b4ccdb5c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0d65c7d17b4ccdb5c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-05a6c11256a512033",
            "private_dns": "ip-10-0-104-15.eu-west-1.compute.internal",
            "private_ip": "10.0.104.15",
            "public_dns": "ec2-34-244-147-222.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.244.147.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04fd5a0f08e51a636",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c69650232aefd87",
            "tags": {
              "Name": "jack-eng47-terraform-db"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-010604e60dcce124a"
            ]
          },
          "dependencies": [
            "aws_security_group.db_security_group",
            "aws_subnet.db_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-029c429461d0a69fb",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a6889223bcd1fa28",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jack-eng47-terraform-app-route-table"
            },
            "vpc_id": "vpc-0f958495da4434d16"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-asos",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050e623ef55eb1344",
            "route_table_id": "rtb-029c429461d0a69fb",
            "subnet_id": "subnet-081065f5dfd7cca13"
          },
          "dependencies": [
            "aws_route_table.app_route_table",
            "aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-075b1d10e514228fe",
            "description": "TF lesson example security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075b1d10e514228fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app_security_group",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jack-eng47-terraform-app-sec-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f958495da4434d16"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-010604e60dcce124a",
            "description": "TF lesson example security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010604e60dcce124a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.103.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.103.0/24"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "db_security_group",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jack-eng47-terraform-db-sec-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f958495da4434d16"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-081065f5dfd7cca13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-081065f5dfd7cca13",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "jack-eng47-terraform-app-subnet"
            },
            "vpc_id": "vpc-0f958495da4434d16"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-03c69650232aefd87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.104.0/24",
            "id": "subnet-03c69650232aefd87",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "jack-eng47-terraform-db-subnet"
            },
            "vpc_id": "vpc-0f958495da4434d16"
          }
        }
      ]
    }
  ]
}